client interactive fiction setup

--- a/client/src/styles/ForceGraph.css
+++ b/client/src/styles/ForceGraph.css
@@ -2,19 +2,19 @@
     fill: #000;
     font-size: 12px;
     background: #fff;
+    user-select: none;
 }
 
 .default-node {
     background: #fff;
     border: 2px solid #999;
     border-radius: 50%;
-    font-size: 12px;
+    font-size: 50%;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     aspect-ratio: 1/1;
     user-select: none;
-    box-shadow: 0 0 10px rgba(24, 144, 255, 0.1);
     pointer-events: none;
 }
